--- a/PhoneScoutAdmin/Views/StorageView.xaml
+++ b/PhoneScoutAdmin/Views/StorageView.xaml
@@ -53,11 +53,20 @@
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
 
-                    <TextBlock Grid.Row="0"
-                               Grid.Column="0"
-                               Margin="5"
-                               FontSize="16"
-                               Text="Part name:" />
+                    <StackPanel Grid.Row="0"
+            Grid.Column="0"
+            Orientation="Horizontal"
+            Margin="5">
+                        <TextBlock Text="ℹ"
+               FontSize="16"
+               Foreground="#2300B3"
+               VerticalAlignment="Center"
+               ToolTip="Displays the URL of the manufacturer's official website." />
+                        <TextBlock Text="Part name:"
+               FontSize="16"
+               VerticalAlignment="Center"/>
+                        
+                    </StackPanel>
 
                     <TextBox Grid.Row="0"
                              Grid.Column="1"
