--- a/PhoneScoutAdmin/Views/BatteryChargingView.xaml
+++ b/PhoneScoutAdmin/Views/BatteryChargingView.xaml
@@ -13,7 +13,7 @@
               Grid.Column="1"
               Margin="5"
               Padding="25"
-              Header="Modify the CPU details"
+              Header="Modify the battery details"
               BorderBrush="#2300B3"
               BorderThickness="2"
               VerticalAlignment="Center">
@@ -43,15 +43,15 @@
 
 
                     <TextBlock Text="ℹ"
-               FontSize="14"
-               Foreground="DodgerBlue"
+               FontSize="16"
+               Foreground="#2300B3"
                Cursor="Hand"
                VerticalAlignment="Center"
                                ToolTipService.InitialShowDelay="500">
 
                         <TextBlock.ToolTip>
                             <ToolTip>
-                                The manufacturer name of the CPU (e.g., Intel, AMD).
+                                Displays the battery capacity in mAh.
                             </ToolTip>
                         </TextBlock.ToolTip>
 
@@ -77,14 +77,14 @@
 
 
                     <TextBlock Text="ℹ"
-               FontSize="14"
-               Foreground="DodgerBlue"
+               FontSize="16"
+               Foreground="#2300B3"
                Cursor="Hand"
                VerticalAlignment="Center" ToolTipService.InitialShowDelay="500">
 
                         <TextBlock.ToolTip>
                             <ToolTip>
-                                The manufacturer name of the CPU (e.g., Intel, AMD).
+                                Displays the battery type in mAh.
                             </ToolTip>
                         </TextBlock.ToolTip>
 
@@ -110,14 +110,14 @@
 
 
                     <TextBlock Text="ℹ"
-               FontSize="14"
-               Foreground="DodgerBlue"
+               FontSize="16"
+               Foreground="#2300B3"
                Cursor="Hand"
                VerticalAlignment="Center" ToolTipService.InitialShowDelay="500">
 
                         <TextBlock.ToolTip>
                             <ToolTip>
-                                The manufacturer name of the CPU (e.g., Intel, AMD).
+                                Displays the max wired charging in Watts.
                             </ToolTip>
                         </TextBlock.ToolTip>
 
@@ -142,14 +142,14 @@
 
 
                     <TextBlock Text="ℹ"
-               FontSize="14"
-               Foreground="DodgerBlue"
+               FontSize="16"
+               Foreground="#2300B3"
                Cursor="Hand"
                VerticalAlignment="Center" ToolTipService.InitialShowDelay="500">
 
                         <TextBlock.ToolTip>
                             <ToolTip>
-                                The manufacturer name of the CPU (e.g., Intel, AMD).
+                                Displays the max wireless charging in Watts.
                             </ToolTip>
                         </TextBlock.ToolTip>
 
@@ -174,14 +174,14 @@
 
 
                     <TextBlock Text="ℹ"
-               FontSize="14"
-               Foreground="DodgerBlue"
+               FontSize="16"
+               Foreground="#2300B3"
                Cursor="Hand"
                VerticalAlignment="Center" ToolTipService.InitialShowDelay="500">
 
                         <TextBlock.ToolTip>
                             <ToolTip>
-                                The manufacturer name of the CPU (e.g., Intel, AMD).
+                                Displays the charger type. 
                             </ToolTip>
                         </TextBlock.ToolTip>
 
