--- a/PhoneScoutAdmin/Views/CameraView.xaml
+++ b/PhoneScoutAdmin/Views/CameraView.xaml
@@ -19,7 +19,6 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
 
             </Grid.RowDefinitions>
 
@@ -37,15 +36,15 @@
 
 
                 <TextBlock Text="ℹ"
-               FontSize="14"
-               Foreground="DodgerBlue"
+               FontSize="16"
+Foreground="#2300B3"
                Cursor="Hand"
                VerticalAlignment="Center"
                                ToolTipService.InitialShowDelay="500">
 
                     <TextBlock.ToolTip>
                         <ToolTip>
-                            The manufacturer name of the CPU (e.g., Intel, AMD).
+                            Displays the name of the selected camera.
                         </ToolTip>
                     </TextBlock.ToolTip>
 
@@ -71,14 +70,14 @@
 
 
                 <TextBlock Text="ℹ"
-               FontSize="14"
-               Foreground="DodgerBlue"
+               FontSize="16"
+Foreground="#2300B3"
                Cursor="Hand"
                VerticalAlignment="Center" ToolTipService.InitialShowDelay="500">
 
                     <TextBlock.ToolTip>
                         <ToolTip>
-                            The manufacturer name of the CPU (e.g., Intel, AMD).
+                            Displays the resolution of the selected camera.
                         </ToolTip>
                     </TextBlock.ToolTip>
 
@@ -104,14 +103,14 @@
 
 
                 <TextBlock Text="ℹ"
-               FontSize="14"
-               Foreground="DodgerBlue"
+               FontSize="16"
+Foreground="#2300B3"
                Cursor="Hand"
                VerticalAlignment="Center" ToolTipService.InitialShowDelay="500">
 
                     <TextBlock.ToolTip>
                         <ToolTip>
-                            The manufacturer name of the CPU (e.g., Intel, AMD).
+                            Displays the aperture of the selected camera. Example: f/1.9
                         </ToolTip>
                     </TextBlock.ToolTip>
 
@@ -122,13 +121,14 @@
                VerticalAlignment="Center"/>
             </StackPanel>
 
-            <TextBox Grid.Row="2"
-                     Grid.Column="1"
+
+
+
+                <TextBox Grid.Row="2" Grid.Column="1"                 
                      Width="180"
                      Margin="5"
                      Text="{Binding CameraAperture, UpdateSourceTrigger=PropertyChanged}" />
-
-            <StackPanel Grid.Row="3"
+                <StackPanel Grid.Row="3"
             Grid.Column="0"
             Orientation="Horizontal"
             VerticalAlignment="Center">
@@ -136,14 +136,14 @@
 
 
                 <TextBlock Text="ℹ"
-               FontSize="14"
-               Foreground="DodgerBlue"
+               FontSize="16"
+Foreground="#2300B3"
                Cursor="Hand"
                VerticalAlignment="Center" ToolTipService.InitialShowDelay="500">
 
                     <TextBlock.ToolTip>
                         <ToolTip>
-                            The manufacturer name of the CPU (e.g., Intel, AMD).
+                            Displays the focal length of the selected camera.
                         </ToolTip>
                     </TextBlock.ToolTip>
 
@@ -168,14 +168,14 @@
 
 
                 <TextBlock Text="ℹ"
-               FontSize="14"
-               Foreground="DodgerBlue"
+               FontSize="16"
+Foreground="#2300B3"
                Cursor="Hand"
                VerticalAlignment="Center" ToolTipService.InitialShowDelay="500">
 
                     <TextBlock.ToolTip>
                         <ToolTip>
-                            The manufacturer name of the CPU (e.g., Intel, AMD).
+                            Displays if the selected camera has an OIS (Optical Image Stabilizer) or not.
                         </ToolTip>
                     </TextBlock.ToolTip>
 
@@ -186,10 +186,10 @@
                VerticalAlignment="Center"/>
             </StackPanel>
 
-            <CheckBox Grid.Row="4"
+            <CheckBox Grid.Row="4" VerticalAlignment="Center"
 Grid.Column="1"
 Margin="5"
-HorizontalAlignment="Left"
+HorizontalAlignment="Center"
 IsChecked="{Binding CameraOIS}" />
 
             <StackPanel Grid.Row="5"
@@ -200,14 +200,14 @@ IsChecked="{Binding CameraOIS}" />
 
 
                 <TextBlock Text="ℹ"
-          FontSize="14"
-          Foreground="DodgerBlue"
+          FontSize="16"
+Foreground="#2300B3"
           Cursor="Hand"
           VerticalAlignment="Center" ToolTipService.InitialShowDelay="500">
 
                     <TextBlock.ToolTip>
                         <ToolTip>
-                            The manufacturer name of the CPU (e.g., Intel, AMD).
+                            Displays the type of the selected camera. Example: selfie, main camera.
                         </ToolTip>
                     </TextBlock.ToolTip>
 
@@ -224,17 +224,7 @@ Width="180"
 Margin="5"
 Text="{Binding CameraType, UpdateSourceTrigger=PropertyChanged}" />
 
-            <!-- Save -->
-            <Button Grid.Row="6"
-                    Grid.ColumnSpan="2"
-                    Margin="10,15,10,0"
-                    Padding="5"
-                    FontSize="18"
-                    Background="WhiteSmoke"
-                    BorderBrush="#68F145"
-                    BorderThickness="3"
-                    Content="Save changes"
-                    Command="{Binding SaveManufacturerCommand}" />
+
         </Grid>
     </GroupBox>
 </UserControl>
