--- a/PhoneScoutAdmin/Views/ColorSectionView.xaml
+++ b/PhoneScoutAdmin/Views/ColorSectionView.xaml
@@ -15,18 +15,19 @@
         <!-- LEFT SIDE -->
         <StackPanel Grid.Column="0" Background="#EAEAEA">
 
-            <Button Content="Add Camera"
-                    Command="{Binding AddColorCommand}"
-                    Margin="10"/>
+            <Button Grid.Row="2" Content="Add color" Margin="0,10,0,10" FontSize="16" Width="180" Padding="5" Background="White" Foreground="Green" BorderBrush="#80A4CB" BorderThickness="3" VerticalAlignment="Center" HorizontalAlignment="Center" Command="{Binding AddColorCommand}"/>
+
+
+
 
             <ListBox ItemsSource="{Binding Colors}"
-                     SelectedItem="{Binding SelectedColor}"
-                     DisplayMemberPath="Name"
-                     Margin="10"/>
+         SelectedItem="{Binding SelectedColor}"
+         DisplayMemberPath="Name"
+         Margin="10"/>
 
-            <Button Content="Delete Camera"
-                    Command="{Binding RemoveColorCommand}"
-                    Margin="10"/>
+            <Button Grid.Row="2" Content="Remove color" Margin="0,10,0,10" FontSize="16" Width="180" Padding="5" Background="White" Foreground="Red" BorderBrush="#80A4CB" BorderThickness="3" VerticalAlignment="Center" HorizontalAlignment="Center" Command="{Binding RemoveColorCommand}"/>
+
+          
 
         </StackPanel>
 
