--- a/PhoneScoutAdmin/Views/ColorView.xaml
+++ b/PhoneScoutAdmin/Views/ColorView.xaml
@@ -37,8 +37,8 @@
 
 
                 <TextBlock Text="ℹ"
-               FontSize="14"
-               Foreground="DodgerBlue"
+               FontSize="16"
+Foreground="#2300B3"
                Cursor="Hand"
                VerticalAlignment="Center"
                                ToolTipService.InitialShowDelay="500">
@@ -71,8 +71,8 @@
 
 
                 <TextBlock Text="ℹ"
-               FontSize="14"
-               Foreground="DodgerBlue"
+               FontSize="16"
+Foreground="#2300B3"
                Cursor="Hand"
                VerticalAlignment="Center" ToolTipService.InitialShowDelay="500">
 
